--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
